# oss-share

./: .gitignore  LICENSE  README.md  README_ZH.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-08-drag-drop-upload.md  2026-04-08-installer-options.md  2026-04-08-oss-share-implementation.md  2026-04-08-upload-state-refactor.md
docs/superpowers/specs/: 2026-04-08-drag-drop-upload-design.md  2026-04-08-installer-options-design.md  2026-04-08-oss-share-design.md
installer/nsis/: installer.nsi
shell-extension/: Cargo.toml
shell-extension/src/: command.rs  lib.rs  pipe_client.rs
sparse-package/: AppxManifest.xml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  ipc.rs  main.rs  oss.rs  tray.rs  upload_state.rs
src/components/: DropOverlay.vue  FileRow.vue  UploadStatusBanner.vue
src/types/: upload.ts
src/views/: Files.vue  Settings.vue
