[package]
name = "oss-share-shell"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "implement"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
