[package]
name = "oss-share"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dirs = "5"
windows = { version = "0.58", features = [
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Threading"
] }
ali-oss-rs = "0.2.5"
arboard = "3"
